# data_science_project_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  labels.yml
docs/: pyproject_setup.md
src/: fibonacci.py
tests/: test_fibonacci.py
