[project]
name = "data_science_project_template"
version = "0.1.0"
description = "This is a template repo for data science project."
authors = [
    {name = "BrambleXu", email = "liangxu006@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
]